--- a/supervisor/gunicorn.conf
+++ b/supervisor/gunicorn.conf
@@ -1,9 +1,9 @@
 [program:dhtweb]
-command=/usr/bin/gunicorn -k gevent --access-logfile wanducc.log --error-logfile wanducc_err.log --access-logformat '%({X-Real-IP}i)s %(l)s %(u)s %(t)s "%(r)s" %(s)s %(b)s "%(f)s" "%(a)s"' manage:app -b 127.0.0.1:8000 -w 4
+command=/usr/bin/gunicorn -k gevent --access-logfile wanducc.log --error-logfile wanducc_err.log --access-logformat '%({X-Real-IP}i)s %(l)s %(u)s %(t)s "%(r)s" %(s)s %(b)s "%(f)s" "%(a)s"' manage:app -b 0.0.0.0:8000 -w 4
 numprocs=1
 stopsignal=KILL
 process_name=%(program_name)s_%(process_num)02d
-directory=/root/zsky
+directory=/root/wandudht
 stderr_logfile=/opt/log/supervisord/%(program_name)s-%(process_num)02d-stderr.log
 stdout_logfile=/opt/log/supervisord/%(program_name)s-%(process_num)02d-stdout.log
 startretries=3
