--- a/supervisor/indexer.conf
+++ b/supervisor/indexer.conf
@@ -1,5 +1,5 @@
 [program:indexer]
-command=/usr/local/sphinx-jieba/bin/indexer -c /root/zsky/sphinx.conf film --rotate
+command=/usr/local/sphinx-jieba/bin/indexer -c /root/wandudht/sphinx.conf film --rotate
 stderr_logfile=/opt/log/supervisord/%(program_name)s-%(process_num)02d-stderr.log
 stdout_logfile=/opt/log/supervisord/%(program_name)s-%(process_num)02d-stdout.log
 numprocs=1
