--- a/supervisor/searchd.conf
+++ b/supervisor/searchd.conf
@@ -1,5 +1,5 @@
 [program:searchd]
-command=/usr/local/sphinx-jieba/bin/searchd --config /root/zsky/sphinx.conf
+command=/usr/local/sphinx-jieba/bin/searchd --config /root/wandudht/sphinx.conf
 stderr_logfile=/opt/log/supervisord/%(program_name)s-%(process_num)02d-stderr.log
 stdout_logfile=/opt/log/supervisord/%(program_name)s-%(process_num)02d-stdout.log
 numprocs=1
